experimental/kanboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kanboard
  labels:
    app: kanboard

spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: kanboard
